* `hashover.js` file moved

	- `hashover.js` moved into `hashover/` directory, this allows you to
	  rename the HashOver root directory without having to modify
	  `hashover.js` as well. This also allows you to have multiple
	  versions of HashOver running on your server without conflicts, each
	  version simply needs its own directory.


* Small code improvements.


Changes by Jacob Barkdull 2016-01-09
--------------------------------------------------------------------------------
* Fixed: Administrative comment deletion requiring name and password.
* Fixed: Posting comment without a file value posts comment normally.


Changes by Jacob Barkdull 2016-01-04
--------------------------------------------------------------------------------
* hashover/scripts/writecomments.php

	- Fixed: All comments from unlogged in users posting with default name.
	- Other small bug fixes.


Changes by Jacob Barkdull 2016-01-03
--------------------------------------------------------------------------------
* Improved Markdown

	- Added support for Github-style code blocks.
	- Now ignoring nested patterns, allows multi-underscore "blank space."
	- Now allowing an underlined word to appear on a line by itself.


* hashover/scripts/writecomments.php

	- Fixed: Unfinished <code> tags not being escaped.


* hashover/scripts/javascript-mode.php

	- Improved embedded images, now automatically closes upon error.
	- Fixed: Thread link not displayed on some replies after sorting.
	- Fixed: Tabs and spaces being trimmed from block HTML tags.


* hashover/scripts/jsminifier.php

	- Now removing entire line when removing single-line code comments.
	- Smarter indentation and whitespace removal.


Changes by Jacob Barkdull 2016-01-01
--------------------------------------------------------------------------------
* Improved Markdown, allow the erroneous use of grave accents as apostrophes.
* Now only getting the current date once when parsing comments.
* Small bug fixes.

