@@ -9,6 +9,11 @@ Changes by Jacob Barkdull 2016-01-20
 	  version simply needs its own directory.
 
 
+* Comments from logged in users now have `hashover-user-owned` class.
+* Fixed: One popular comment more than configured limit being shown.
+* Fixed: `fieldOptions` setting not being synced.
+* Removed public `$JSONSettingsFile` setting.
+* Improved popular comment sorting.
 * Small code improvements.
 
 
